Add initial seed of ecosystem analytics papers

--- a/book.bib
+++ b/book.bib
@@ -10,3 +10,139 @@
   note = {ISBN 978-1498716963},
   url = {http://yihui.name/knitr/},
 }
+
+@inproceedings{Kikas2017,
+  doi = {10.1109/msr.2017.55},
+  url = {https://doi.org/10.1109/msr.2017.55},
+  year  = {2017},
+  month = {may},
+  publisher = {{IEEE}},
+  author = {Riivo Kikas and Georgios Gousios and Marlon Dumas and Dietmar Pfahl},
+  title = {Structure and Evolution of Package Dependency Networks},
+  booktitle = {2017 {IEEE}/{ACM} 14th International Conference on Mining Software Repositories ({MSR})}
+}
+
+@article{Raemaekers2017,
+  doi = {10.1016/j.jss.2016.04.008},
+  url = {https://doi.org/10.1016/j.jss.2016.04.008},
+  year  = {2017},
+  month = {jul},
+  publisher = {Elsevier {BV}},
+  volume = {129},
+  pages = {140--158},
+  author = {S. Raemaekers and A. van Deursen and J. Visser},
+  title = {Semantic versioning and impact of breaking changes in the Maven repository},
+  journal = {Journal of Systems and Software}
+}
+
+@article{Kula2017,
+  doi = {10.1007/s10664-017-9521-5},
+  url = {https://doi.org/10.1007/s10664-017-9521-5},
+  year  = {2017},
+  month = {may},
+  publisher = {Springer Nature},
+  volume = {23},
+  number = {1},
+  pages = {384--417},
+  author = {Raula Gaikovina Kula and Daniel M. German and Ali Ouni and Takashi Ishio and Katsuro Inoue},
+  title = {Do developers update their library dependencies?},
+  journal = {Empirical Software Engineering}
+}
+
+@inproceedings{Abdalkareem2017,
+  doi = {10.1145/3106237.3106267},
+  url = {https://doi.org/10.1145/3106237.3106267},
+  year  = {2017},
+  publisher = {{ACM} Press},
+  author = {Rabe Abdalkareem and Olivier Nourry and Sultan Wehaibi and Suhaib Mujahid and Emad Shihab},
+  title = {Why do developers use trivial packages? an empirical case study on npm},
+  booktitle = {Proceedings of the 2017 11th Joint Meeting on Foundations of Software Engineering  - {ESEC}/{FSE} 2017}
+}
+
+@inproceedings{Robbes2012,
+  doi = {10.1145/2393596.2393662},
+  url = {https://doi.org/10.1145/2393596.2393662},
+  year  = {2012},
+  publisher = {{ACM} Press},
+  author = {Romain Robbes and Mircea Lungu and David R\"{o}thlisberger},
+  title = {How do developers react to {API} deprecation?},
+  booktitle = {Proceedings of the {ACM} {SIGSOFT} 20th International Symposium on the Foundations of Software Engineering - {FSE} {\textquotesingle}12}
+}
+
+@incollection{Mens2013,
+  doi = {10.1007/978-3-642-45398-4_10},
+  url = {https://doi.org/10.1007/978-3-642-45398-4_10},
+  year  = {2013},
+  month = {dec},
+  publisher = {Springer Berlin Heidelberg},
+  pages = {297--326},
+  author = {Tom Mens and Ma{\'{a}}lick Claes and Philippe Grosjean and Alexander Serebrenik},
+  title = {Studying Evolving Software Ecosystems based on Ecological Models},
+  booktitle = {Evolving Software Systems}
+}
+
+@article{Constantinou2017,
+  doi = {10.1007/s11334-017-0303-4},
+  url = {https://doi.org/10.1007/s11334-017-0303-4},
+  year  = {2017},
+  month = {aug},
+  publisher = {Springer Nature},
+  volume = {13},
+  number = {2-3},
+  pages = {101--115},
+  author = {Eleni Constantinou and Tom Mens},
+  title = {An empirical comparison of developer retention in the {RubyGems} and npm software ecosystems},
+  journal = {Innovations in Systems and Software Engineering}
+}
+
+@inproceedings{Claes2015,
+  doi = {10.1109/msr.2015.27},
+  url = {https://doi.org/10.1109/msr.2015.27},
+  year  = {2015},
+  month = {may},
+  publisher = {{IEEE}},
+  author = {Maelick Claes and Tom Mens and Roberto Di Cosmo and Jerome Vouillon},
+  title = {A Historical Analysis of Debian Package Incompatibilities},
+  booktitle = {2015 {IEEE}/{ACM} 12th Working Conference on Mining Software Repositories}
+}
+
+@inproceedings{Abate2009,
+  doi = {10.1109/esem.2009.5316017},
+  url = {https://doi.org/10.1109/esem.2009.5316017},
+  year  = {2009},
+  month = {oct},
+  publisher = {{IEEE}},
+  author = {Pietro Abate and Roberto Di Cosmo and Jaap Boender and Stefano Zacchiroli},
+  title = {Strong dependencies between software components},
+  booktitle = {2009 3rd International Symposium on Empirical Software Engineering and Measurement}
+}
+
+@inproceedings{Hejderup2018,
+  doi = {10.1145/3183399.3183417},
+  url = {https://doi.org/10.1145/3183399.3183417},
+  year  = {2018},
+  publisher = {{ACM} Press},
+  author = {Joseph Hejderup and Arie van Deursen and Georgios Gousios},
+  title = {Software ecosystem call graph for dependency management},
+  booktitle = {Proceedings of the 40th International Conference on Software Engineering New Ideas and Emerging Results - {ICSE}-{NIER} {\textquotesingle}18}
+}
+
+@inproceedings{Bogart2016,
+  doi = {10.1145/2950290.2950325},
+  url = {https://doi.org/10.1145/2950290.2950325},
+  year  = {2016},
+  publisher = {{ACM} Press},
+  author = {Christopher Bogart and Christian K\"{a}stner and James Herbsleb and Ferdian Thung},
+  title = {How to break an {API}: cost negotiation and community values in three software ecosystems},
+  booktitle = {Proceedings of the 2016 24th {ACM} {SIGSOFT} International Symposium on Foundations of Software Engineering - {FSE} 2016}
+}
+
+@inproceedings{Trockman2018,
+  doi = {10.1145/3183440.3190335},
+  url = {https://doi.org/10.1145/3183440.3190335},
+  year  = {2018},
+  publisher = {{ACM} Press},
+  author = {Asher Trockman},
+  title = {Adding sparkle to social coding},
+  booktitle = {Proceedings of the 40th International Conference on Software Engineering Companion Proceeedings - {ICSE} {\textquotesingle}18}
+}
